--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ARRSix-utils",
+  "name": "arr-six-utils",
   "version": "1.0.0",
   "description": "",
   "main": "dist/ARRSix-utils.cjs.js",
