--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arr-six-utils",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/ARRSix-utils.cjs.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "@types/node": "^18.11.18",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "rollup": "^3.8.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "tslib": "^2.4.1"
